--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,17 @@
+alabaster==0.7.9
+Babel==2.3.4
+describe-it==2.2.2
 Django==1.10.2
+django-nose==1.4.4
+docutils==0.12
+imagesize==0.7.1
+Jinja2==2.8
+MarkupSafe==0.23
+nose==1.3.7
 pip==8.1.2
+Pygments==2.1.3
+pytz==2016.7
 setuptools==28.6.0
+six==1.10.0
+snowballstemmer==1.2.1
 wheel==0.30.0a0
