--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,5 @@ python:
 install: "pip install -r requirements.txt"
 # command to run tests
 script: nosetests --with-describe-it
+# command to specify database
+services: sqlite3
